Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-88687

qdoc: ASSERT: "rc <= 0xffff" in file qt5/qtbase/src/corelib/text/qchar.h, line 114

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 6.0.1, 6.1.0
    • 6.0.0 RC
    • Build tools: qdoc
    • None
    • 5
    • e197fcdce4cd966f57e474cd7acac2cda71511ed (qt/qttools/dev) 690ac170a61976e3d4e3b4f35de51c28c29aa07e (qt/qttools/6.0)
    • Da Vinci - sprint 21

    Description

      QDoc now asserts in cppcodemarker.cpp after this was integrated: https://codereview.qt-project.org/c/qt/qtbase/+/321953

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            treinio Topi Reiniö
            treinio Topi Reiniö
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes