qdoc: Fix incorrect usage of QChar(EOF)

Since qtbase commit 915be660, QChar(EOF), where EOF is defined as (-1)
in stdlib.h, is deemed incorrect and causes an assert.

Instead of assigning EOF to QChar, replace the readChar() macro with
a lambda and track the EOF state with a boolean.

Pick-to: 6.0
Fixes: QTBUG-88687
Change-Id: I480054cd36dc049909f709e23269d42deffecec1
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>